{
    "name": "GameplayInput",
    "maps": [
        {
            "name": "UI",
            "id": "62345d4e-c2aa-46f3-b192-f8a2f8f2037b",
            "actions": [
                {
                    "name": "Pause",
                    "type": "PassThrough",
                    "id": "86fc76b0-f9d2-4318-bbeb-8221c6b9775b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "a410dbce-d944-4d28-9b1a-0efdd87429da",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Click",
                    "type": "PassThrough",
                    "id": "3df0b3c8-b07c-4f80-843b-9923078906d6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6de0bc98-5d7b-4979-8fcc-f873e84216a4",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9623e458-8f54-4a05-9217-416542f6155b",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d3536ab3-c22d-45ae-b6d7-23679cf39450",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Player",
            "id": "a6204a56-f071-4ce4-a93f-7aa8add5a6dc",
            "actions": [
                {
                    "name": "CallHumanInteraction",
                    "type": "Button",
                    "id": "3bae8a71-044d-4744-9117-dfcc8199d673",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "CatInteraction",
                    "type": "Button",
                    "id": "816e9369-78e7-471a-9bc0-b56a2eef0b17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "HorizontalMove",
                    "type": "Value",
                    "id": "4d2e4cb5-b3d0-4e5a-950a-b7881e06c34d",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UpJump",
                    "type": "Button",
                    "id": "ba3f8af6-0c7a-465e-9595-de81f8ab5390",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "DownJump",
                    "type": "Button",
                    "id": "b0f72c8c-0d9c-48ae-8d01-c55cd0ef1c8f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b4065826-8da3-4c2b-baa2-cff9ac8e1389",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CallHumanInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ff2de162-7395-4b3c-8311-1a2162136b26",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CatInteraction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "b0bcc134-d92f-476b-a44d-c8197bf9754d",
                    "path": "1DAxis(whichSideWins=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "9bd4cce0-a734-4635-a5b7-19f8347714c1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "690676da-58a2-4f69-87a5-d8f8a227e4cb",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HorizontalMove",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "17eda3cb-9a66-4b45-9833-edea8a6aeed1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UpJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2018d3d2-1658-4e27-9707-f84914fb2a5e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "DownJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}